--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,29 +1,10 @@
-.whole-content {
-    background-color: blueviolet;
-    color: black;
-    border: 4px solid white;
-    width: 300px;
-    height: fit-content;
-    padding: 4px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    position: absolute;
-}
-
-
-body {
-    background-color: blueviolet;
-}
-
-button {
+.log-reg-button {
     border: 3px solid black;
     font-weight: 700;
     background-color: purple;
 }
 
-button:hover {
+.log-reg-button:hover {
     transform: scale(1.03);
     color: white;
     border: 3px solid white;
@@ -48,3 +29,4 @@ input:focus {
     border-color: blue;
     background: rgba(197, 190, 190, 0.4);
 }
+
