--- a/client/src/App.css
+++ b/client/src/App.css
@@ -30,3 +30,17 @@ input:focus {
     background: rgba(197, 190, 190, 0.4);
 }
 
+.loader{
+    border: 4px solid #d73131;
+    border-top: 4px solid transparent;
+    border-radius: 50%;
+    width: 68px;
+    height: 68px;
+    animation: spin 1s linear infinite;
+    position: relative;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
